# cpp_course_exercises

./: README.md
exercise_10_cpp/: CMakeLists.txt
exercise_1_cpp/: CMakeLists.txt  taskA  taskA.cpp  taskB  taskB.cpp
exercise_2_cpp/: CMakeLists.txt  oppg1  oppg1.cpp  oppg2  oppg2.cpp  oppg3  oppg3.cpp  oppg4  oppg4.cpp  oppg5  oppg5.cpp  oppg6  oppg6.cpp
exercise_3_cpp/: CMakeLists.txt  oppg1.hpp  oppg2.cpp  oppg3.cpp  oppg3.hpp  oppg4.cpp
exercise_4_cpp/: CMakeLists.txt  main.cpp  oppg1.cpp
exercise_5_cpp/: CMakeLists.txt  main.cpp
exercise_6_cpp/: CMakeLists.txt  oppg1.cpp  oppg2.cpp
exercise_9_cpp/: CMakeLists.txt  main.cpp
